2005-01-23  Geoff Norton  <gnorton@customerdna.com>

	* dirent.c: Include <unistd.h> to bring off_t in on gcc4.0+OSX

2005-01-13  Jonathan Pryor  <jonpryor@vt.edu>

	* map.h: Correct Mono_Posix_OpenFlags values (they should now match 
	  x86 linux); remove unused enumerations (MountFlags, etc.).

2005-01-13  Jonathan Pryor  <jonpryor@vt.edu>

	* fstab.c: Fix HPUX support.  HPUX includes both <fstab.h> and
	  <checkpoint.h>, so we need to give preference to <checkpoint.h>.

2005-01-05  Jonathan Pryor  <jonpryor@vt.edu>

	* fstab.c: Add support for HPUX, which uses <checklist.h>.

2005-01-05  Jonathan Pryor  <jonpryor@vt.edu>

	* map.c: Continuing my ineptitude...  <sys/wait.h> isn't on Win32.
	* mph.h: Win32 doesn't define EOVERFLOW, either.  Define it.

2005-01-05  Jonathan Pryor  <jonpryor@vt.edu>

	* map.c: Include <config.h> so we can check for PLATFORM_WIN32.

2005-01-05  Jonathan Pryor  <jonpryor@vt.edu>

	* map.c: Fix Win32 build break.  Win32 doesn't have all the sys/* headers.

2005-01-05  Jonathan Pryor  <jonpryor@vt.edu>

	* serial.c: HPUX compiler fix.
	* stdlib.c: Add C-defined macro wrappers.

2005-01-04  Jonathan Pryor  <jonpryor@vt.edu>

	* stdio.c: Add wrapper for C99's snprintf(3).

2005-01-04  Jonathan Pryor  <jonpryor@vt.edu>

	* Makefile.am: Rewrite.  Remove configure-generated warnings about 
	  multiple _LIBADD and _SOURCES lines.  Add support for Win32.  
	  Win32 support is limited to ANSI C functions.
	* stdio.c: Don't compile Unix wrappers on Win32.

2005-01-04  Raja R Harinath  <rharinath@novell.com>

	* Makefile.am (LIBS): Remove.  Was overriding results of configure check.
	(libMonoPosixHelper_la_LIBADD): List $(GLIB_LIBS) here.

2005-01-04  Jonathan Pryor  <jonpryor@vt.edu>

	* Makefile.am: Add libnsl to LIBS.  Hopefully this will let sparc link.
	* mph.h: Make MPH_INTERNAL conditional on __GNUC__.

2005-01-03  Jonathan Pryor  <jonpryor@vt.edu>

	* signal.c, stdio.c: Remove "function declaration isn't a prototype" warnings.